pkg/controller/translator/testdata/ingress-gce-regional-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce-regional-external"
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /testpath
        backend:
          service:
            name: first-service
            port:
              number: 80
