pkg/controller/translator/testdata/ingress-missing-multi-svc.json
{
	"DefaultBackend": {
		"ID": {
			"Service": {
				"Namespace": "kube-system",
				"Name": "default-http-backend"
			},
			"Port": "http"
		}
	},
	"HostRules": {
		"abc.com": [],
		"foo.bar.com": []
	}
}
