pkg/controller/translator/testdata/ingress-missing-multi-svc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /testpath
        backend:
          serviceName: some-service
          servicePort: 80
  - host: abc.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: other-service
          servicePort: 80
