pkg/controller/translator/testdata/ingress-missing-rule-svc.json
{
	"DefaultBackend": {
		"ID": {
			"Service": {
				"Namespace": "kube-system",
				"Name": "default-http-backend"
			},
			"Port": "http"
		}
	},
	"HostRules": {
		"abc.com": [],
		"foo.bar.com": [
			{
				"Path": "/testpath",
				"Backend": {
					"ID": {
						"Service": {
							"Namespace": "default",
							"Name": "first-service"
						},
						"Port": 80
					}
				}
			}
		]
	}
}
