pkg/controller/translator/testdata/ingress-multi-paths.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /testpath
        backend:
          serviceName: first-service
          servicePort: 80
      - path: /otherpath
        backend:
          serviceName: second-service
          servicePort: 80
