pkg/controller/translator/testdata/ingress-no-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        backend:
          serviceName: first-service
          servicePort: 80
