pkg/controller/translator/testdata/ingress-single-host.json
{
	"DefaultBackend": {
		"ID": {
			"Service": {
				"Namespace": "kube-system",
				"Name": "default-http-backend"
			},
			"Port": "http"
		}
	},
	"HostRules": [
		{
			"HostName": "foo.bar.com",
			"Paths": [
				{
					"Path": "/testpath",
					"Backend": {
						"ID": {
							"Service": {
								"Namespace": "default",
								"Name": "first-service"
							},
							"Port": 80
						}
					}
				}
			]
		}
	]
}
