pkg/controller/translator/testdata/ingress-two-hosts.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: first-service
          servicePort: 80
  - host: abc.com
    http:
      paths:
      - backend:
          serviceName: second-service
          servicePort: 80
